--- a/SourceCodePreparer/App.config
+++ b/SourceCodePreparer/App.config
@@ -11,7 +11,7 @@
     <userSettings>
         <SourceCodePreparer.Properties.Settings>
             <setting name="Filter" serializeAs="String">
-                <value>.c .cpp .cxx .h .hpp .hxx .glsl .vert .frag .geom .tcs .tes</value>
+                <value>.c .cpp .cxx .h .hpp .hxx .glsl .vert .frag .geom .glvs .glgs .glfs .tcs .tes</value>
             </setting>
         </SourceCodePreparer.Properties.Settings>
     </userSettings>
